#4 Create header and footer section

--- a/ts/todo/src/index.html
+++ b/ts/todo/src/index.html
@@ -5,6 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Todo-Ts</title>
+    <link rel="stylesheet" href="./styles/main.css" />
   </head>
-  <body></body>
+  <body>
+    <header class="header-wrapper">
+      <h1 class="heading">todos</h1>
+    </header>
+    <section class="todo-wrapper"></section>
+    <footer class="footer-wrapper">
+      <ul class="guides">
+        <li class="guide-item">Double-click to edit a todo</li>
+        <li class="guide-item">Written by Luke Edwards</li>
+        <li class="guide-item">Refactored by Aaron Muir Hamilton</li>
+        <li class="guide-item">Part of TodoMVC</li>
+      </ul>
+    </footer>
+  </body>
 </html>
